Dopped static lastUrl.